--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>smigles UI</title>
-    <link rel="stylesheet" href="../dist/kawakiri.css">
+    <link rel="stylesheet" href="../dist/css/kawakiri.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="page">
@@ -643,6 +643,6 @@
         </div>-->
     </main>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="../dist/js/kawakiri.min.js"></script>
 </body>
 </html>
